--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="navbar El Aromo">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark " aria-label="navbar El Aromo">
     <div class="container">
-        <img class="nav-logo" src="/img/logo.jpg" alt="Barrio El Aromo">
+        <img class="nav-logo" src="/img/logo.png" alt="Barrio El Aromo"> <span>El Aromo</span>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsAromo" aria-controls="navbarsAromo" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,10 @@
                     <a class="nav-link <% if (page === 'mascotas') { %>active<% } %>" href="/mascotas">Mascotas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link <% if (page === 'comidas') { %>active<% } %>" href="/comidas">Comidas</a>
+                    <a class="nav-link <% if (page === 'alimentos') { %>active<% } %>" href="/alimentos">Alimentos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link <% if (page === 'clasificados') { %>active<% } %>" href="/clasificados">Clasificados</a>
+                    <a class="nav-link <% if (page === 'clasificados') { %>active<% } %>" href="/">Clasificados</a>
                 </li>
             </ul>
         </div>
