--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,18 +11,20 @@ body {
 }
   
 .bg-gray{
-    background-color: #f5f9fa;    
+    background-color:#d3e2dc;
+}
+.bg-light-gray{
+    background-color: #f5f8f1;    
+}
+   
+.bg-light-green{
+    background-color: #d4e9bb;    
 }
 
-.bg-dark-gray{
-    background-color:#dce5e7;
-}
-
-
-/* Main Nav */
+/** Main Nav **/
 
 .nav-logo, .ftr-image{
-  width: 100px;
+  width: 150px;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover{
@@ -32,32 +34,24 @@ body {
     color:#e6e482;    
 }
 
-/* Hero*/
+/** Hero **/
 
-.hero {
-    background-image: url('/img/bg.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
+.hero {    
+    background-color: #d4e9bb;
+} 
 
 .hero-image {
-    width: 40%;
-    border-radius: 20px;
-    box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 75%);
-    margin:10px;
+    max-width: 100%; 
 }
 
-.hero-left-container{  
-    background-color: #dce5e7;
-    padding: 40px;
-    border-radius: 0 50px;
-    box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 75%);
-    text-align: center;
-    width: 400px;  /*70%*/
+.hero-row {
+    position: relative;
+    height: 20px;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
 }
 
-/* Main section */
+/** Main section **/
 
 .main-container{
     padding: 40px;
@@ -74,24 +68,33 @@ body {
     font-weight:500;      
     font-size: 28px;
 }
+.section-subtitle{
+    color: #676767;
+    padding: 0;
+    font-weight:500;      
+    font-size: 24px;
+}
+
 .section-text{
     color: #676767;  
     line-height: 1.5;
     font-size: 16px;
     margin-bottom: 24px;
 }
-
+.card{
+    border-radius: 8px; 
+}
 .card-style{  
     background: #ffffff;
     padding: 20px;
-    /* box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 75%); */
-    box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 50%);    
+    border-radius: 8px; 
+    box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 50%);      
 }
-
+ 
 .card:hover{    
     box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 75%);
-    transition: box-shadow .1s ease-in-out; 
-    /* transform: scale(1.1); */
+    transition: box-shadow .1s ease-in-out;     
+    cursor: pointer;
 }
 
 .card-image{
@@ -99,65 +102,92 @@ body {
 }
 
 .card-title-style{
-    /*color: #676767;  */
-    color:#5399a5;
-    font-size: 22px; /*20px; */
+    color: #42b983;
+    font-size: 22px;
     text-align: center;   
 }
 
-.card-btn-style, .clasif-btn-style{
-    padding: 0px 30px;/* 5px;
-    /* border-radius: 10px; */
-    font-size: 16px;    
-    cursor: pointer;       
- }   
+.card-link{
+    color: #42b983;
+    font-size: 18px;
+    font-weight:600;
+    text-decoration: none;
+ }  
+ 
+ .card-link:hover{ 
+    color:#42b983;    
+    text-decoration: underline;
+ } 
 
-/* Clasificados - Compartir Info section */
+ .bi-arrow-style{
+    color: #42b983; 
+    font-size: 18px;     
+    vertical-align: middle;
+ }
 
+/** Clasificados - Compartir Info section **/
 .image-container{
     width:50%;
 }
  .clasif-image, .share-image{
     max-width: 100%;
 }
-
-.card-link{
-    color:#5399a5; 
-    font-size: 18px;
-    font-weight:600;
-    text-decoration: none;
-}  
- .card-link:hover{ 
-    color:#5399a5;    
-    text-decoration: underline;
- } 
-
- .bi-arrow-style{
-    color: #5399a5; 
-    font-size: 18px;     
-    vertical-align: middle;
- }
-  
- .pulse:hover {
+.pulse:hover{
     animation-duration: 3s;
     animation-name: heartBeat;
     animation-iteration-count: 3;
-    
 }
 
- /* Footer */
+/** Proveedores **/
 
+.p-card{
+    background-color:rgb(126, 126, 126);
+}
+.p-card-body{
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 8px; 
+    box-shadow: -1px 3px 10px -1px rgb(0 0 0 / 50%);  
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+} 
+
+.plus-icon{
+    color: #42b983;
+}
+
+.reviews-title-style{
+    color: #42b983; 
+    font-size: 18px;
+    font-weight:500;    
+}
+
+.hide-reviews {
+    display: none;
+}
+
+ /** Footer **/
  .ftr-title-text{
+    font-size: 22px;
     font-weight: 400;       
     margin-bottom:10px; 
  }
 
+.a-tel{
+    color: inherit;
+    text-decoration: none;
+}
+.a-tel:hover{
+    color: inherit;
+    text-decoration: underline;
+}
+
 
 @media(max-width: 768px) {  /* 0, 768 incluido */
-    .imgText-container{  
+    .imgText-container {  
         flex-direction: column-reverse;          
     }      
-    .hero-align-container{
+     .hero-align-container {
         display:flex;
         justify-content: center;
         margin-top: 20px;
